Update to use new genconfig and fix dal namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,21 +17,14 @@ find_package(oksdbinterfaces REQUIRED)
 find_package(coredal REQUIRED)
 
 daq_generate_dal(listrev.schema.xml
-  NAMESPACE dunedaq::coredal
-  INCLUDE ${CMAKE_CODEGEN_BINARY_DIR}/include/${PROJECT_NAME}
-  INCLUDE_DIRECTORIES ${coredal_DIR}
-  CPP ${CMAKE_CODEGEN_BINARY_DIR}/src
-  CPP_OUTPUT  dal_cpp_srcs
-  DUMP_OUTPUT cpp_dump_src)
-
-daq_add_library(${dal_cpp_srcs} DAL LINK_LIBRARIES coredal::coredal oksdbinterfaces::oksdbinterfaces okssystem::okssystem logging::logging)
+  NAMESPACE dunedaq::listrev::dal DEP_PKGS coredal)
 
 daq_codegen( randomdatalistgenerator.jsonnet TEMPLATES Structs.hpp.j2 Nljs.hpp.j2)
 daq_codegen( randomdatalistgeneratorinfo.jsonnet DEP_PKGS opmonlib TEMPLATES opmonlib/InfoStructs.hpp.j2 opmonlib/InfoNljs.hpp.j2 )
 
-daq_add_plugin(ListReverser duneDAQModule	     LINK_LIBRARIES appfwk::appfwk)
-daq_add_plugin(RandomDataListGenerator duneDAQModule LINK_LIBRARIES listrev appfwk::appfwk
- listrev coredal::coredal oksdbinterfaces::oksdbinterfaces okssystem::okssystem)
-daq_add_plugin(ReversedListValidator duneDAQModule   LINK_LIBRARIES appfwk::appfwk)
+daq_add_plugin(ListReverser duneDAQModule	     LINK_LIBRARIES appfwk::appfwk listrev_oks)
+daq_add_plugin(RandomDataListGenerator duneDAQModule LINK_LIBRARIES appfwk::appfwk
+  coredal::coredal oksdbinterfaces::oksdbinterfaces okssystem::okssystem listrev_oks)
+daq_add_plugin(ReversedListValidator duneDAQModule   LINK_LIBRARIES appfwk::appfwk listrev_oks)
 
 daq_install()
